feat: purchase testcases

--- a/src/templates/submission.ejs
+++ b/src/templates/submission.ejs
@@ -1,5 +1,6 @@
 <!-- prettier-ignore -->
 <% let heading, subheading %>
+<% console.log(status); %>
 <% if (status) { %>
   <% heading = "Congratulations! :)" %>
   <% subheading = "You have passed the sample testcases. Click the submit button to run your code against all the code test cases."; %>
